--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -9,8 +9,48 @@
 </head>
 
 <body>
-    <h1>Fried Rice</h1>
 
+    <!-- Fried Rice Recipe Header and Image -->
+    <h1>Fried Rice</h1>
+    <img src="../images/fried_rice.jpeg" alt="Fried Rice">
+
+    <!-- Fried Rice Description -->
+    <h2>Description</h2>
+
+    <p>Fried rice is an easy dish to make that is great to use with leftover rice and other ingredients. Common ingredients for fried rice include leftover white or brown rice, assorted vegetables, eggs, soy sauce, and basic seasoning. </p>
+
+    <p>Today we will be creating a Fried Rice dish that combines common ingredients that can be found in any kitchen.</p>
+
+    <!-- Fried Rice Ingredients (unordered list) -->
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>3 tbsp canola oil (can be substituted)</li>
+        <li>1 cup cooked white rice</li>
+        <li>2 beaten eggs</li>
+        <li>2 chopped scallions</li>
+        <li>1/3 cup diced onions</li>
+        <li>2 tsp minced garlic</li>
+        <li>2 tbsp soy sauce</li>
+        <li>1 tbsp sesame oil (optional)</li>
+        <li>1 tbsp butter</li>
+        <li>salt and pepper to taste</li>
+    </ul>
+
+    <!-- Fried rice steps (ordered lists)-->
+    <h3>Steps</h3>
+
+    <ol>
+        <li>Add the canola oil to a preheated wok or frying pan.</li>
+        <li>Once the oil is hot, add in the scallions, onions, and garlic.</li>
+        <li>Lightly season the vegatables.</li>
+        <li>After 30 seconds of cooking the vegetables, add the beaten eggs and scramble them till lightly cooked.</li>
+        <li>Add in the white rice.</li>
+        <li>Add the soy sauce, sesame oil, and butter.</li>
+        <li>Start breaking up and stir frying the rice.</li>
+        <li>Proceed to add any optional preferred (cooked) meat to the dish.</li>
+        <li>Season the rice with salt and pepper to taste and serve.</li>
+    </ol>
 </body>
 
 </html>
