--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 </head>
 
 <body>
+
     <h1>Odin Recipes</h1>
-    <a href="recipes/fried_rice.html">Fried Rice</a>
+    <ul>
+
+        <li> <a href="recipes/fried_rice.html">Fried Rice</a> </li>
+
+        <li> <a href="recipes/tiktok_ramen.html">Tiktok Ramen</a> </li>
+
+        <li> <a href="recipes/scrambled_eggs.html">Scrambled Eggs</a> </li>
+
+    </ul>
 </body>
 
 </html>
