--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <h1>Odin Recipes</h1>
+    <img src="images/Chefcat.jpeg" alt="Chef Cat">
     <ul>
 
         <li> <a href="recipes/fried_rice.html">Fried Rice</a> </li>
